--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Datasource: conexio a bd
 spring.datasource.url=jdbc:mysql://localhost:3306/icon
-spring.datasource.username=root
-spring.datasource.password=rigoberto
+spring.datasource.username=USUARIOROOT
+spring.datasource.password=CLAVEROOT
 
 # Hibernate: automaticamente se impacte automaticamente cambios en BD
 spring.jpa.hibernate.ddl-auto=update
